# discount_finder_langchain

./: .gitignore  LICENSE  README.md
api/: pyproject.toml
api/discount_finder_langchain/: agent.py  api.py  config.py  constant.py  prompts.py  routes.py  schemas.py  services.py  tools.py  utils.py
extension/: background.js  content.js  manifest.json  popup.html  popup.js  toast.css
